经常使用的网站链接修改

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "memmrf",
   "version": "1.0.0",
   "description": "memmrf",
-  "author": "mi.rufeng <958936985@qq.com>",
+  "author": "米如峰",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
